
Application Fixes:

- Slightly better implementation of the Upgrade mechanism for cyberware. Still needs work, but shouldn't improperly consume Essence anymore. 
- Fixed an issue with cyberware that should not permit subsystems still doing so. 
- Fixed incorrect consumption of capacity by modular limbs connecting to modular connectors. 

UI Changes:

- Fixed some behaviour with non-maximised windows to prevent new windows from being opened maximised, or windows being maximised on gaining focus. 
- Added Minimise and Maximise buttons to the Character Roster. Closes #3495
- Made some changes to the PoolToolTip property to properly account for custom attributes.

Data Changes:

- Fixed incorrect spelling of Limit Modifiers on the Retractable Climbing Claws cyberware.
- Fixed incorrect Page and Specialisation category for the Cavalier Champion. Closes #3496
- Added a new customdata entry for German Data Changes to add Machine Pistols and Submachine Guns to Standard and Heavy Weapon Mounts.
- Added missing side prompts to the synthetic modular full arm and leg.

String Changes:

- Added a string tag for the Enable Plugins menu option. Closes #3486

Build 205

Application Changes:
- Added a new improvement type - actiondicepool - to support specific Actions receiving dicepool bonuses. Currently only Threading is supported by this.
- Fixed behaviour of Exotic weapons to prevent them from from using the first exotic skill found.
- Exposed the selection of AI programs to the main RequirementsMet method. Prevents issues with programs not being translated, offends me slightly less. Fixes #3350
- Fixed processing of FixedValues on the Select Gear window.
- Refactored string processing method for Gear Ratings into a single method. Allows MinRating, MaxRating, MatrixAttributes and TotalBonusMatrixBoxes (for LivingPersona only) to use complex strings such as {Parent DeviceRating}. Fixes #3360
- Foxed some behaviour in creation of packs to properly allow creatio nof lifestyles.